@@ -4,6 +4,8 @@ debian-installer (20040806) UNRELEASED; urgency=medium
     - Handle arch/subarch specific kernel module udeb inclusion.
   * Joey Hess
     - Add page markers to the syslinux help screens.
+    - Update install manual section 3.5 to note that d-i can resize fat,
+      and to de-emphasise the fips stuff. Closes: #265029
   * dann frazier
     - Add ia64 elilo .msg files from Jim Lieb
     - Add ia64 2.6 image build goo, contributed by Jim Lieb
